Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-9278

crash when access failed quota proc file

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.10.0
    • Lustre 2.10.0
    • None
    • 3
    • 9223372036854775807

      If quota did not have accounting objects because of failed to
      load or unsupported, @lqp_obj will be NULL, we could still
      have some NULL pointer access

      [<ffffffffa0c60730>] ? lprocfs_quota_seq_show+0x460/0x460 [lquota]
      [<ffffffff8126bd8f>] proc_reg_open+0x6f/0x100
      [<ffffffff811fbfb7>] do_dentry_open+0x1a7/0x2e0
      [<ffffffff812a8bfc>] ? security_inode_permission+0x1c/0x30
      [<ffffffff8126bd20>] ? proc_reg_release+0x70/0x70
      [<ffffffff811fc18f>] vfs_open+0x5f/0xe0
      [<ffffffff81209b58>] ? may_open+0x68/0x110
      [<ffffffff8120ccfd>] do_last+0x1ed/0x12a0
      [<ffffffff8120de72>] path_openat+0xc2/0x490
      [<ffffffff8118075b>] ? unlock_page+0x2b/0x30
      [<ffffffff8120ffeb>] do_filp_open+0x4b/0xb0
      [<ffffffff8121cc77>] ? __alloc_fd+0xa7/0x130
      [<ffffffff811fd4f3>] do_sys_open+0xf3/0x1f0
      [<ffffffff811fd60e>] SyS_open+0x1e/0x20
      [<ffffffff81696d49>] system_call_fastpath+0x16/0x1b

            niu Niu Yawei (Inactive)
            wangshilong Wang Shilong (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: